fix url in register

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_API_PURCHASE = https://mysterious-cove-95911.herokuapp.com/purchases
 REACT_APP_API_LOGIN = https://mysterious-cove-95911.herokuapp.com/login
+REACT_APP_API_USERS = https://mysterious-cove-95911.herokuapp.com/users
 REACT_APP_API_PRODUCTS = https://mysterious-cove-95911.herokuapp.com/products
 
